objects/ASI_TnE_Tax_Date_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ASI TnE Tax Rate setting for:
-PR Singapore
-PR Thailand
-PR Malaysia
-PR Taiwan</description>
    <fields>
        <fullName>ASI_TnE_Default_Tax_Rate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default Tax Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>ASI TnE Tax Date Mapping</label>
</CustomObject>